fixed bio overflow bug

--- a/src/index.css
+++ b/src/index.css
@@ -65,9 +65,10 @@ h1 {
 h2 {
   font-family: "Bebas Neue", system-ui;
   letter-spacing: 0.5px;
-  margin-top: 15px;
-  margin-bottom: 15px;
-  font-size: 2em;
+  margin-top: 5px;
+  padding: 0;
+  margin-bottom: 1px;
+  font-size: 2.5em;
   font-weight: 300;
   display: flex;
   justify-content: center;
@@ -201,8 +202,6 @@ td {
   align-items: center;
   justify-content: center;
   position: relative;
-  margin-top: 0;
-  margin-bottom: 20px;
 }
 
 .candidate-card {
@@ -222,7 +221,8 @@ td {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  line-height: 0.5;
+  word-break: break-all;
+  line-height: 3em;
   padding: 10px;
   position: relative;
   max-height: 350px;
@@ -230,8 +230,13 @@ td {
 }
 
 p {
-  line-height: 1.5px;
-  font-size: 18px;
+  line-height: 1.5em;
+  font-size: 16px;
+  margin: 0;
+  padding: 5px 10px;
+  word-wrap: break-word;
+  white-space: normal;
+  text-align: center;
 }
 
 .avatar-container {
@@ -249,6 +254,7 @@ img {
   width: 100%;
   height: 100%;
   object-fit: cover;
+  object-position: center;
   border-radius: 10px 10px 0 0;
   margin: 0px;
   max-height: 250px;
@@ -264,6 +270,8 @@ img {
   display: flex;
   justify-content: space-between;
   width: 100%;
+  padding: 0px;
+  margin: 0px;
 }
 
 .plus,
